# terraform-registry-mirror

./: .gitignore  .terraformrc  Cargo.toml  README.md  flake.nix  scheme.md  scheme.org
certs/: minica-key.pem  minica.pem
certs/localhost/: cert.pem  key.pem
src/: lib.rs  main.rs  storage_backend.rs
