[package]
name = "terraform-registry-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
