[package]
name = "terraform-registry-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.7.9", features = ["json", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dashmap = "6.1.0"
dyn-clone = "1.0.17"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.5.2", features = ["util"] }
